feat(teams): Add team list endpoint
